refactoring and bug fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GADS Leaderboard</string>
+    <string name="logo">Google Africa Developer Scholarship logo</string>
 </resources>
