--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">GADS Leaderboard</string>
     <string name="logo">Google Africa Developer Scholarship logo</string>
+    <string name="yes">Yes</string>
+    <string name="are_you_sure">Are you sure?</string>
 </resources>
